# rust

./: Askama.toml  Cargo.toml  README.md  run.sh  run_app.sh
config/: default.toml
migrations/2023-05-09-000001_create_users/: up.sql
migrations/2023-05-09-000002_create_products/: down.sql  up.sql
migrations/2023-05-09-000003_create_orders/: down.sql  up.sql
migrations/2023-05-09-000004_create_messages/: up.sql
migrations/2023-05-09-000005_create_wallets/: down.sql  up.sql
migrations/2023-05-09-000006_create_vendor_verification/: down.sql  up.sql
src/: app.rs  constants.rs  database.rs  errors.rs  logger.rs  main.rs  schema.rs  settings.rs  templates.rs
src/middleware/: auth.rs  mod.rs  rate_limiter.rs  request_id.rs
src/models/: message.rs  mod.rs  order.rs  payment.rs  product.rs  user.rs  vendor.rs
src/routes/: admin.rs  frontend.rs  message.rs  mod.rs  order.rs  payment.rs  product.rs  product_dry.rs  user.rs  vendor.rs
src/utils/: authenticate_request.rs  db_operations.rs  dry_example.rs  error_context.rs  mod.rs  pagination.rs  response_formatter.rs  route_handlers.rs  token.rs  validation.rs
static/: index.html  login.html  product_detail.html  products.html  register.html
templates/components/: product_card.html
templates/layouts/: base.html
templates/pages/: home.html  login.html  messages.html  order_detail.html  orders.html  product_detail.html  products.html  profile.html  register.html  security.html  vendor_dashboard.html  wallet.html
