[package]
name = "tor_marketplace"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7.5" }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tokio = { version = "1.39.1", features = ["full"] }

# Utilities
once_cell = "1.20.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.12.4", features = ["json"] }
pretty_assertions = "1.4.1"
