[package]
name = "tor_marketplace"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression", "limit", "propagate-header", "sensitive-headers"] }
tokio = { version = "1.39.1", features = ["full", "signal"] }

# Database
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0" }
r2d2 = "0.8.10"

# Authentication
argon2 = "0.5.3"
jsonwebtoken = "9.2.0"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Error handling
thiserror = "1.0.57"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Configuration
config = "0.14.0"
once_cell = "1.20.0"

# Validation
validator = { version = "0.16.1", features = ["derive"] }

# Utilities
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.12.4", features = ["json"] }
pretty_assertions = "1.4.1"
tokio-test = "0.4.3"
wiremock = "0.5.22"
