[package]
name = "tor_marketplace"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["full"] }
tokio = { version = "1.39.1", features = ["full", "signal"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
thiserror = "1.0.57"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Configuration
once_cell = "1.20.0"

# Templating
askama = "0.12.1"

# Utilities
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.12.4", features = ["json"] }
pretty_assertions = "1.4.1"
